--- a/HW1.tex
+++ b/HW1.tex
@@ -241,6 +241,7 @@
   the sentence below.
 \textbf{Solution:} We created the generative art in Question 1 using the \texttt{aRtsy}
 package for \texttt{R}.\citep{aRtsy}
+\bibliography{bib}
 \end{enumerate}
 
 \newpage
@@ -259,10 +260,6 @@ package for \texttt{R}.\citep{aRtsy}
 \textbf{Solution:}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hldef{my_vector} \hlkwb{<-} \hlnum{0}\hlopt{:}\hlnum{10}
-\hldef{my_vector}
-\end{alltt}
 \begin{verbatim}
 ##  [1]  0  1  2  3  4  5  6  7  8  9 10
 \end{verbatim}
@@ -275,10 +272,6 @@ package for \texttt{R}.\citep{aRtsy}
 \textbf{Solution:} 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hldef{result_vector} \hlkwb{<-} \hlnum{2}\hlopt{^}\hldef{(my_vector} \hlopt{+} \hlnum{1}\hldef{)} \hlopt{+} \hlnum{2}\hlopt{^}\hldef{(my_vector} \hlopt{-} \hlnum{1}\hldef{)}
-\hldef{result_vector}
-\end{alltt}
 \begin{verbatim}
 ##  [1]    2.5    5.0   10.0   20.0   40.0   80.0  160.0  320.0  640.0 1280.0
 ## [11] 2560.0
@@ -292,9 +285,6 @@ package for \texttt{R}.\citep{aRtsy}
 \textbf{Solution:}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlkwd{which}\hldef{(result_vector}\hlopt{==}\hlnum{40.0}\hldef{)}
-\end{alltt}
 \begin{verbatim}
 ## [1] 5
 \end{verbatim}
@@ -309,7 +299,7 @@ package for \texttt{R}.\citep{aRtsy}
   % QUESTION 2e
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item Explain why this approach wouldn't work for something like $3^{x+2} + 5 (3^x) = 84$ where the solution is $x \approx 1.6309$.\\
-\textbf{Solution:}
+\textbf{Solution: This approach wouldn't work in this case since the correct value for x is not a whole number. Using the vector approach, x would need to be a whole number for this approach to work.}
 \end{enumerate}
 \end{enumerate}
 
